// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows styling 1`] = `
<div
  style={
    Object {
      "width": "100px",
    }
  }
>
  <div
    style={
      Object {
        "display": "table",
        "height": 0,
        "overflow": "hidden",
        "paddingBottom": "66.66666666666667%",
      }
    }
  >
    <img
      alt=""
      src="http://example.com/image.jpg"
      style={
        Object {
          "display": "block",
          "position": "absolute",
          "width": "100%",
          "zIndex": 1,
        }
      }
    />
    <div>
      <div
        style={
          Object {
            "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`prepends https schema 1`] = `
<div>
  <div
    style={
      Object {
        "display": "table",
        "height": 0,
        "overflow": "hidden",
        "paddingBottom": "66.66666666666667%",
      }
    }
  >
    <img
      alt=""
      src="//example.com/image.jpg"
      style={
        Object {
          "display": "block",
          "position": "absolute",
          "width": "100%",
          "zIndex": 1,
        }
      }
    />
    <div>
      <div
        style={
          Object {
            "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`renders correctly 1`] = `
<div>
  <div
    style={
      Object {
        "display": "table",
        "height": 0,
        "overflow": "hidden",
        "paddingBottom": "66.66666666666667%",
      }
    }
  >
    <img
      alt=""
      src="http://example.com/image.jpg"
      style={
        Object {
          "display": "block",
          "position": "absolute",
          "width": "100%",
          "zIndex": 1,
        }
      }
    />
    <div>
      <div
        style={
          Object {
            "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
          }
        }
      />
    </div>
  </div>
</div>
`;
